--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,42 @@
         </div>
       </div>
     </div>
+
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-4 mb-5">
+          <h2 class="mb-5">Let's do it today!</h2>
+
+          <div class="card mb-3 bg-warning text-light" title="A Project">
+            <div class="card-body">
+              <h5 class="card-title">You're Next (KW)</h5>
+              <p class="card-text">Project pembuatan novel yang telah lama tertunda. Adopsi dari You're Next dengan rasa sendiri.</p>
+              <p class="text-dark">26 days | 3 of 8 tasks completed.</p>
+            </div>
+          </div>
+
+          <div class="card mb-3" title="A Project">
+            <div class="card-body">
+              <h5 class="card-title">You're Next (KW)</h5>
+              <p class="card-text">Project pembuatan novel yang telah lama tertunda. Adopsi dari You're Next dengan rasa sendiri.</p>
+              <p class="text-muted">26 days | 3 of 8 tasks completed.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <h2 class="mb-5">Done today.</h2>
+
+          <div class="card mb-3 bg-success text-light" title="A Project">
+            <div class="card-body">
+              <h5 class="card-title">You're Next (KW)</h5>
+              <p class="card-text">Project pembuatan novel yang telah lama tertunda. Adopsi dari You're Next dengan rasa sendiri.</p>
+              <p class="text-dark">26 days | 3 of 8 tasks completed.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     
 
     <!-- BOOTSTRAP JS-->
