--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
             <div class="card-body">
               <h5 class="card-title">You're Next (KW)</h5>
               <p class="card-text">Project pembuatan novel yang telah lama tertunda. Adopsi dari You're Next dengan rasa sendiri.</p>
-              <p class="text-dark">26 days | 3 of 8 tasks completed.</p>
+              <p class="text-dark">26 days • 3 of 8 tasks completed.</p>
             </div>
           </div>
 
@@ -81,24 +81,30 @@
             <div class="card-body">
               <h5 class="card-title">You're Next (KW)</h5>
               <p class="card-text">Project pembuatan novel yang telah lama tertunda. Adopsi dari You're Next dengan rasa sendiri.</p>
-              <p class="text-muted">26 days | 3 of 8 tasks completed.</p>
+              <p class="text-muted">26 days • 3 of 8 tasks completed.</p>
             </div>
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4 mb-5">
           <h2 class="mb-5">Done today.</h2>
 
           <div class="card mb-3 bg-success text-light" title="A Project">
             <div class="card-body">
               <h5 class="card-title">You're Next (KW)</h5>
               <p class="card-text">Project pembuatan novel yang telah lama tertunda. Adopsi dari You're Next dengan rasa sendiri.</p>
-              <p class="text-dark">26 days | 3 of 8 tasks completed.</p>
+              <p class="text-dark">26 days • 3 of 8 tasks completed.</p>
             </div>
           </div>
         </div>
       </div>
     </div>
+
+    <footer class="bg-light py-5">
+      <div class="container text-center">
+        <p class="m-0">© 2019 M Fatoni</p>
+      </div>
+    </footer>
     
 
     <!-- BOOTSTRAP JS-->
