--- a/public/index.html
+++ b/public/index.html
@@ -57,14 +57,20 @@
         </div>
     </nav>
 
+    <!-- MINI DASHBOARD
+
     <div class="jumbotron bg-light">
       <div class="container">
-          <h1 class="display-4">You've completed 60 projects,<br>now do the remaining 3 one step at a time <i class="material-icons md-48" style="font-size: 45px !important">emoji_food_beverage</i></h1>
+          <h1 class="display-4">You've completed 60 projects,<br>now do the remaining 3, one step at a time <i class="material-icons md-48" style="font-size: 45px !important">emoji_food_beverage</i></h1>
         </div>
       </div>
     </div>
 
+    -->
+
     <div class="container">
+
+      <!-- HOME
       <div class="row justify-content-center">
         <div class="col-md-4 mb-5">
           <h2 class="mb-5">Let's do it today!</h2>
@@ -98,6 +104,57 @@
           </div>
         </div>
       </div>
+      -->
+
+      <div class="row py-5">
+
+          <div class="col-md-12">
+            <h1 class="mb-5">Congratulations! This is what you've tackle so far.</h1>  
+          </div>
+          
+
+          <div class="col-md-4">
+            <div class="card mb-3 bg-warning text-light" title="A Project">
+              <div class="card-body">
+                <h5 class="card-title">You're Next (KW)</h5>
+                <p class="card-text">Project pembuatan novel yang telah lama tertunda. Adopsi dari You're Next dengan rasa sendiri.</p>
+                <p class="text-dark">26 days • 8 tasks completed.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card mb-3 bg-warning text-light" title="A Project">
+              <div class="card-body">
+                <h5 class="card-title">You're Next (KW)</h5>
+                <p class="card-text">Project pembuatan novel yang telah lama tertunda. Adopsi dari You're Next dengan rasa sendiri.</p>
+                <p class="text-dark">26 days • 8 tasks completed.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card mb-3 bg-success text-light" title="A Project">
+              <div class="card-body">
+                <h5 class="card-title">You're Next (KW)</h5>
+                <p class="card-text">Project pembuatan novel yang telah lama tertunda. Adopsi dari You're Next dengan rasa sendiri.</p>
+                <p class="text-dark">26 days • 8 tasks completed.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card mb-3" title="A Project">
+              <div class="card-body">
+                <h5 class="card-title">You're Next (KW)</h5>
+                <p class="card-text">Project pembuatan novel yang telah lama tertunda. Adopsi dari You're Next dengan rasa sendiri.</p>
+                <p class="text-dark">26 days • 8 tasks completed.</p>
+              </div>
+            </div>
+          </div>
+
+      </div>
+
     </div>
 
     <footer class="bg-light py-5">
