--- a/public/index.html
+++ b/public/index.html
@@ -106,6 +106,8 @@
       </div>
       -->
 
+
+      <!-- ACHIEVEMENTS
       <div class="row py-5">
 
           <div class="col-md-12">
@@ -153,6 +155,66 @@
             </div>
           </div>
 
+      </div>
+      -->
+
+      <div class="row py-5">
+        <div class="col-md-12 mb-5">
+          <h3>Do it one small step at a time so you can done it easily.</h3>
+          <a href="#" class="text-muted">Back to home</a>
+        </div>
+
+        <div class="col-md-6 mb-5">
+          <div class="card bg-warning text-light" title="A Project">
+            <div class="card-body">
+              <h5 class="card-title">You're Next (KW)</h5>
+              <p class="card-text">Project pembuatan novel yang telah lama tertunda. Adopsi dari You're Next dengan rasa sendiri.</p>
+              <p class="text-dark">26 days • 3 of 8 tasks completed.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <h5 class="mb-3">List of small tasks</h5>
+          <div class="card mb-3">
+            <div class="card-body clearfix">
+              <p class="card-text float-left pt-2">Outline novel awal-akhir</p>
+              <div class="float-right">
+                <button class="btn" title="Done"><i class="material-icons">done</i></button>
+                <button class="btn" title="Delete"><i class="material-icons">clear</i></button>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-3">
+            <div class="card-body clearfix">
+              <p class="card-text float-left pt-2">Outline novel awal-akhir</p>
+              <div class="float-right">
+                <button class="btn" title="Done"><i class="material-icons">done</i></button>
+                <button class="btn" title="Delete"><i class="material-icons">clear</i></button>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-3">
+            <div class="card-body clearfix">
+              <p class="card-text float-left pt-2"><del>Outline novel awal-akhir</del></p>
+              <div class="float-right">
+                <button class="btn" title="Undo"><i class="material-icons">undo</i></button>
+                <button class="btn" title="Delete"><i class="material-icons">clear</i></button>
+              </div>
+            </div>
+          </div>
+
+          <form class="bg-light px-3 pt-3">
+            <div class="form-row">
+              <div class="col-md-9 mb-3">
+                <input type="text" class="form-control" placeholder="Small task...">    
+              </div>
+              <div class="col-md-3 mb-3">
+                <button class="btn btn-primary col">Add</button>
+              </div>
+            </div>
+          </form>
+        </div>
       </div>
 
     </div>
