tambah tombol complete project

--- a/public/index.html
+++ b/public/index.html
@@ -224,6 +224,7 @@
           <div>
             <button class="btn btn-primary" title="Edit" data-toggle="modal" data-target="#formEditProject">Edit</button>
             <button class="btn btn-danger" title="Delete">Delete</button>
+            <button class="btn btn-success" title="Complete Project">It's Complete!</button>
 
             <div class="modal fade" id="formEditProject" tabindex="-1" role="dialog">
               <div class="modal-dialog" role="document">
